--- a/mimidaily/src/main/webapp/css/articles.css
+++ b/mimidaily/src/main/webapp/css/articles.css
@@ -21,6 +21,7 @@
   justify-content: start;
 }
 section.news_list{width: 70%; min-width: 520px;padding: 0 1rem 0 1rem;}
+section.news_list .empty_article .news_cont{justify-content: center;}
 .news_cont{display: flex;justify-content: space-between;align-items: center;margin: 4rem auto 3rem auto;font-size: 20px;position: relative;overflow: hidden;color: #8C7B7B;}
 .news_cont .news_img{width: 200px;height: 140px;border-radius: 4px;overflow: hidden;margin-right:1rem;}
 .news_cont img{width: 100%;height: 100%;} 
