--- a/mimidaily/src/main/webapp/css/view.css
+++ b/mimidaily/src/main/webapp/css/view.css
@@ -94,15 +94,25 @@
 	border-bottom:1px solid rgb(188, 177, 177); */
 	}
 .view_bottom i.none_profile {font-size: 44px;color:#8C7B7B;}
-.view_bottom .profile_img {width:44px;height:44px;}
+.view_bottom .profile_img {width:44px;height:44px;overflow: hidden;}
 .view_bottom .profile_img img {width:100%;height:100%;}
 .journalist_info{margin-left:1rem;}
 .journalist_info .writer_email *{color:#8C7B7B;}
 .journalist_info .writer_email:hover{border-bottom:1px solid;}
 
 /* 댓글 */
-.comments {}
+.comments .comment {padding:1rem 1.5rem;}
 .comments h3 {font-size:20px;border-bottom: 1px solid rgb(188, 177, 177);padding:1rem;}
+.comments .input_comment {display:flex; justify-content:space-between;align-items:center;}
+.comments .input_comment i.none_profile {color:#594543;margin-right:1rem;}
+.comments .comment #comment{width:90%;height:72px;background-color: #f5f2f2;border-radius: 4px;padding: 2px 4px;border-color: #cbc2c2;resize: none;}
+.comments .comment #comment:focus{border: 2px solid;outline: none;}
+.comment_btn {background-color:#594543;color:#f7f5f5;}
+.comments_list {background-color: #F0ECEC;padding:1rem;}
+.coment_cont{display: flex;}
+.comt_context {display: flex;justify-content:space-between;width:100%;}
+.coment_cont i.none_profile{font-size: 32px;}
+.comt_btn {text-align:end;}
 
 /* aside */
 .view_container aside.news_right{
@@ -148,4 +158,9 @@ aside.news_right.md .aside_box i.fa-heart{font-size: 30px;}
   .comts_likes .login_box, .comts_likes .likes, .comts_likes .comments {width:56px;}
   .comts_likes .aside_box .cont p {font-size:14px;}
   .comts_likes .aside_box .cont .like_txt {display:none;}
+  .journalist_info a{font-size:14px;}
+  .journalist_info{text-align: center;}
+  .journalist{padding:1rem;flex-direction:column;}
+  .journalist i, .journalist p{margin-top:0.5rem;}
+  .comments .comment {padding:0.5rem 0;}
 }
