edit : 파일 업로드시 파일만 가능 & 최대크기 3MB 제한 기능 추가

--- a/mimidaily/src/main/webapp/css/login.css
+++ b/mimidaily/src/main/webapp/css/login.css
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: center;
     padding: 30px 0;
-    margin-top: 3rem;
+    margin-top: 40px;
 }
 
 #login_logo {
