Revert "edit : 에러페이지 지정 및 폰트어썸 적용"

--- a/mimidaily/src/main/webapp/css/main.css
+++ b/mimidaily/src/main/webapp/css/main.css
@@ -66,8 +66,8 @@ button{border: none; background-color: transparent; cursor: pointer;}
 }
 ::selection {background-color:#F0ECEC;color: var(--mimiDark);}
 
-/* loading_overlay */
-#loading_overlay { 
+/* loading-overlay */
+#loading-overlay { 
   position: fixed;
   top: 0;
   left: 0;
