edit: 주민번호 ui 수정

--- a/mimidaily/src/main/webapp/css/member.css
+++ b/mimidaily/src/main/webapp/css/member.css
@@ -84,8 +84,9 @@ input[name="gender_code"] {
 	height: 100%;
 	cursor: pointer;
 }
-.xnumber {
+#birth_gender .xnumber {
 	background: var(--mimiDark);
+	width: 7%;
 }
 /* 모달 스타일 */
 .modal {
