--- a/mimidaily/src/main/webapp/css/main.css
+++ b/mimidaily/src/main/webapp/css/main.css
@@ -73,7 +73,7 @@ button{border: none; background-color: transparent; cursor: pointer;}
   left: 0;
   width: 100%;
   height: 100%;
-  background: white;        /* 배경색 */
+  background-color: rgba(0, 0, 0, 0.5);       /* 배경색 */
   display: flex;            /* 중앙 정렬을 위한 flex */
   align-items: center;
   justify-content: center;
@@ -83,7 +83,7 @@ button{border: none; background-color: transparent; cursor: pointer;}
   width: 60px;
   height: 60px;
   border: 6px solid #ddd;
-  border-top-color: #3498db; /* 회전하는 부분 색 */
+  border-top-color: #51595e; /* 회전하는 부분 색 */
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
