--- a/mimidaily/src/main/webapp/css/index.css
+++ b/mimidaily/src/main/webapp/css/index.css
@@ -58,7 +58,7 @@ aside .index_viewest {width:100%}
 aside div.index_viewest div.most_viewed_news {width:100%;margin-left:0;}
 aside div.index_viewest .most_viewed_news .news_content {width: 70%;}
 aside div.index_viewest .most_viewed_news .news_content * {width: 100%;}
-
+aside.xs .login_box>p {white-space: nowrap;}
 @media screen and (max-width: 1200px) {
   #main {width: 90%;justify-content: center;min-width: 320px;}
   aside {margin-left:1rem;}
@@ -79,7 +79,7 @@ aside div.index_viewest .most_viewed_news .news_content * {width: 100%;}
   aside.xs{display:flex;justify-content:space-between;align-items:center;width: 80%;}
   aside.xs .index_viewest{width: 260px;}
   aside.xs .login_box {width: 40%;margin:0;height: 260px;justify-content:center;}
-  aside.xs .login_box>p {text-align: center; white-space: nowrap;}
+  aside.xs .login_box>p {text-align: center; white-space: pre-wrap;}
   aside.xs .login_box .login{width: 80%;}
   aside.xs .logining{flex-direction:column;}
   aside.xs div.index_viewest div.most_viewed_news {height:280px;}
@@ -91,6 +91,7 @@ aside div.index_viewest .most_viewed_news .news_content * {width: 100%;}
   aside.xs {margin-bottom:2rem; justify-content: center;}
   aside.xs .login_box {width: 320px;}
   aside.xs .index_viewest {display:none;}
+  aside.xs .login_box>p {white-space: nowrap;}
 }
 @media screen and (max-width: 500px){
   #main section.most_liked_news .news_list div.news_img{height:140px;}	
