--- a/mimidaily/src/main/webapp/css/main.css
+++ b/mimidaily/src/main/webapp/css/main.css
@@ -49,6 +49,7 @@
   color: var(--mimiDark);
   font-size: 16px;
   font-family: "NotoSansKR-Regular";
+  word-break: break-all;
 }
 html, body{height: 100%;width: 100%;position: relative;background-color: var(--mimiBg);}
 a{text-decoration: none;color: inherit;}
