--- a/mimidaily/src/main/webapp/css/view.css
+++ b/mimidaily/src/main/webapp/css/view.css
@@ -106,8 +106,8 @@
 .comments h3 {font-size:20px;border-bottom: 1px solid rgb(188, 177, 177);padding:1rem;}
 .comments .input_comment {display:flex; justify-content:space-between;align-items:center;}
 .comments .input_comment i.none_profile {color:#594543;margin-right:1rem;}
-.comments .comment #comment{width:90%;height:72px;background-color: #f5f2f2;border-radius: 4px;padding: 2px 4px;border-color: #cbc2c2;resize: none;}
-.comments .comment #comment:focus{border: 2px solid;outline: none;}
+.comments .comment textarea{width:90%;height:72px;background-color: #f5f2f2;border-radius: 4px;padding: 2px 4px;border-color: #cbc2c2;resize: none;}
+.comments .comment textarea:focus{border: 2px solid;outline: none;}
 .comt_cnt_box{text-align:end;}
 .comt_cnt_box span{color:#8C7B7B; font-size:14px;}
 .comment_btn {background-color:#594543;color:#f7f5f5;margin-left:0.5rem;}
@@ -117,11 +117,14 @@
 .comment_box{border-bottom: 1px solid #e1dada; padding: 1rem 0;}
 .coment_cont .profile_img{line-height: 54px;margin-right:0.5rem;}
 .comt_context {display: flex;justify-content:space-between;width:100%;}
+#update_comment{margin-top:0.5rem;}
 /* .comt_context strong{font-size: 18px;} */
 .comt_date {color:#8C7B7B; font-size:14px;}
 .coment_cont i.none_profile{font-size: 32px;}
 .comt_btn {text-align:end;}
+.comt_btn button{margin:0 2px;color:#8C7B7B;border-bottom:1px solid #8C7B7B;font-size:12px;}
 .no_comt{padding:1rem;}
+.is_updated{color:#8C7B7B;font-size:12px;margin-left:4px;}
 
 /* aside */
 .view_container aside.news_right{
@@ -181,3 +184,4 @@ aside.news_right.md .aside_box i.fa-heart{font-size: 30px;}
     height: 30%;
   }
 }
+
