--- a/mimidaily/src/main/webapp/css/view.css
+++ b/mimidaily/src/main/webapp/css/view.css
@@ -106,8 +106,8 @@
 .comments h3 {font-size:20px;border-bottom: 1px solid rgb(188, 177, 177);padding:1rem;}
 .comments .input_comment {display:flex; justify-content:space-between;align-items:center;}
 .comments .input_comment i.none_profile {color:#594543;margin-right:1rem;}
-.comments .comment textarea{width:90%;height:72px;background-color: #f5f2f2;border-radius: 4px;padding: 2px 4px;border-color: #cbc2c2;resize: none;}
-.comments .comment textarea:focus{border: 2px solid;outline: none;}
+.comments textarea{width:90%;height:72px;background-color: #f5f2f2;border-radius: 4px;padding: 2px 4px;border-color: #cbc2c2;resize: none;}
+.comments textarea:focus{border: 2px solid;outline: none;}
 .comt_cnt_box{text-align:end;}
 .comt_cnt_box span{color:#8C7B7B; font-size:14px;}
 .comment_btn {background-color:#594543;color:#f7f5f5;margin-left:0.5rem;}
@@ -130,6 +130,8 @@
 .updated_cnt, .updated_cnt>.cnt {color:#8C7B7B;font-size:12px;}
 .updated_cnt{margin-right: 4px;width: 90%;position: absolute;left: 44px;text-align: start;}
 .comment_cnt{color:#8C7B7B;}
+.view_bottom .more_btn {text-align:center;}
+.view_bottom .more_btn button {margin-top:1rem;background-color:#594543;;color:#F0ECEC;}
 
 /* aside */
 .view_container aside.news_right{
