--- a/mimidaily/src/main/webapp/css/view.css
+++ b/mimidaily/src/main/webapp/css/view.css
@@ -1,69 +1,26 @@
 .btn{border-radius: 4px;text-align: center;margin: 0.5rem auto;padding: 0.5rem 1rem;}
 
 
-/* 모달 전체 영역 */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 100;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-/* 모달 내용 영역 */
+/* 삭제 모달 */
+.modal {display: none;position: fixed;z-index: 100;left: 0;top: 0;width: 100%;height: 100%;overflow: hidden;background-color: rgba(0, 0, 0, 0.5);}
 .modal_content {
   position: relative;
   background-color: var(--mimiContainer);
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 20%;
+  width: 30%;
   height: 20%;
   text-align: center;
   border-radius: 4px;
 }
-
-.modal_content p {
-  font-size: 18px;
-  margin: 25px 0 35px 0;
-}
-
-.modal_content button {
-  padding: 10px 20px;
-  font-size: 16px;
-  margin: 0 10px;
-  cursor: pointer;
-  width: 40%;
-  white-space: nowrap;
-}
-
-.modal_content button#yes_btn {
-  background-color: #8C7B7B;
-  color: white;
-}
-
-.modal_content button#no_btn {
-  background-color: #594543;
-  color: white;
-}
-
-#close_btn {
-  position: absolute;
-  top: 5px;
-  right: 10px;
-  font-size: 24px;
-  font-weight: bold;
-  color: #aaa;
-  cursor: pointer;
-}
-
-#close_btn:hover {
-  color: #000;
-}
+.modal_content p {font-size: 18px;margin: 25px 0 35px 0;}
+.modal_content button {padding: 10px 20px;font-size: 16px;margin: 0 10px;cursor: pointer;width: 40%;white-space: nowrap;display: flex;justify-content: center;}
+.modal_content .btn_box {display: flex;justify-content: center;}
+.modal_content button#yes_btn {background-color: #8C7B7B;color: white;}
+.modal_content button#no_btn {background-color: #594543;color: white;}
+#close_btn {position: absolute;top: 5px;right: 10px;font-size: 24px;font-weight: bold;color: #aaa;cursor: pointer;}
+#close_btn:hover {color: #000;}
 
 
 .view_container{margin: 3rem auto; padding:1rem;position:relative;width: 70%;min-width: 768px;}
@@ -170,9 +127,9 @@ aside.news_right.md .aside_box i.fa-heart{font-size: 30px;}
   .comts_likes .aside_box .cont i{font-size:32px;margin-bottom:4px;}
   .comts_likes .aside_box .cont p{text-align:center;}
   .comts_likes .login_box, .comts_likes .likes, .comts_likes .comments{display:inline-block;height:80px;width:80px;}
-  .modal_content button {
-    margin: 0 5px;
-  }
+
+  .modal_content {width: 40%;}
+  .modal_content button {margin: 0 5px;}
   
   .comt_context strong {width:100%;}
   .comt_context{flex-direction:column-reverse;}
@@ -192,10 +149,7 @@ aside.news_right.md .aside_box i.fa-heart{font-size: 30px;}
   .journalist{padding:1rem;flex-direction:column;}
   .journalist i, .journalist p{margin-top:0.5rem;}
   .comments .comments_form {padding:0.5rem 0;}
-  .modal_content {
-    top: 20%;
-    width: 80%;
-    height: 30%;
-  }
+  
+.modal_content {top: 20%;width: 80%;height: 25%;}
 }
 
