--- a/mimidaily/src/main/webapp/css/main.css
+++ b/mimidaily/src/main/webapp/css/main.css
@@ -65,6 +65,7 @@ button{border: none; background-color: transparent; cursor: pointer;}
   border-radius: 2px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
+.profile_img{overflow:hidden;border-radius:50%;}
 ::selection {background-color:#dfd7d7;color: var(--mimiLight);}
 
 /* loading-overlay */
