--- a/mimidaily/src/main/webapp/css/view.css
+++ b/mimidaily/src/main/webapp/css/view.css
@@ -2,19 +2,28 @@
 
 
 /* 삭제 모달 */
-.modal {display: none;position: fixed;z-index: 100;left: 0;top: 0;width: 100%;height: 100%;overflow: hidden;background-color: rgba(0, 0, 0, 0.5);}
-.modal_content {
-  position: relative;
-  background-color: var(--mimiContainer);
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 30%;
-  height: 20%;
+#deleteModal.modal {
+	display: none;
+	position: fixed;
+	z-index: 100;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	background-color: rgba(0, 0, 0, 0.5);
+	justify-content:center;
+	align-items:center;
+	}
+#deleteModal .modal_content {
+  position:relative;
+  padding: 2rem 1rem;
+  width: 320px;
+  height: 167px;
   text-align: center;
   border-radius: 4px;
 }
-.modal_content p {font-size: 18px;margin: 25px 0 35px 0;}
+#deleteModal .modal_content p {font-size: 18px;margin: 1rem 0 0 0;}
 .modal_content button {padding: 10px 20px;font-size: 16px;margin: 0 10px;cursor: pointer;width: 40%;white-space: nowrap;display: flex;justify-content: center;}
 .modal_content .btn_box {display: flex;justify-content: center;}
 .modal_content button#yes_btn {background-color: #8C7B7B;color: white;}
@@ -52,7 +61,7 @@
 	border-bottom:1px solid rgb(188, 177, 177); */
 	}
 .view_bottom i.none_profile {font-size: 44px;color:#8C7B7B;}
-.view_bottom .profile_img {width:44px;height:44px;overflow: hidden;}
+.view_bottom .profile_img {width:44px;height:44px;overflow: hidden;margin-right:1rem;}
 .view_bottom .profile_img img {width:100%;height:100%;}
 .journalist_info{margin-left:1rem;}
 .journalist_info .writer_email *{color:#8C7B7B;}
@@ -73,7 +82,8 @@
 .coment_cont .content_box{display: flex;flex-direction: column;align-items: end;width:calc(100% - 44px);}
 .comt_content {width: 100%;overflow-x: hidden;}
 .comment_box{border-bottom: 1px solid #e1dada; padding: 1rem 0;}
-.coment_cont .profile_img{margin-right:0.5rem;position: absolute;left:0;top: 4px;}
+.coment_cont .profile_img{margin-right:0.5rem;position: absolute;left: 0;top: 4px;display: flex;justify-content: center;}
+.coment_cont .profile_img.images{width:34px;height:34px;}
 .comt_context {display: flex;justify-content:space-between;width:100%;}
 .comt_context * {white-space:nowrap;}
 #update_comment{margin-top:0.5rem;}
@@ -127,15 +137,13 @@ aside.news_right.md .aside_box i.fa-heart{font-size: 30px;}
   .comts_likes .aside_box .cont i{font-size:32px;margin-bottom:4px;}
   .comts_likes .aside_box .cont p{text-align:center;}
   .comts_likes .login_box, .comts_likes .likes, .comts_likes .comments{display:inline-block;height:80px;width:80px;}
-
-  .modal_content {width: 40%;}
-  .modal_content button {margin: 0 5px;}
   
   .comt_context strong {width:100%;}
   .comt_context{flex-direction:column-reverse;}
   .comt_context .comt_date{text-align:end;}
   .comt_context>p:first-child{position:relative;}
   .is_updated {position: absolute;top: -18px;left:0;margin:0;}
+  .coment_cont .profile_img{top: 26px;}
 }
 @media screen and (max-width: 580px) {
   .view_container aside.news_right .aside_box{transform: translateY(160px);}
@@ -149,7 +157,5 @@ aside.news_right.md .aside_box i.fa-heart{font-size: 30px;}
   .journalist{padding:1rem;flex-direction:column;}
   .journalist i, .journalist p{margin-top:0.5rem;}
   .comments .comments_form {padding:0.5rem 0;}
-  
-.modal_content {top: 20%;width: 80%;height: 25%;}
 }
 
