--- a/mimidaily/src/main/webapp/css/view.css
+++ b/mimidaily/src/main/webapp/css/view.css
@@ -72,8 +72,8 @@
 .comments h3 {font-size:20px;border-bottom: 1px solid rgb(188, 177, 177);padding:1rem;}
 .comments .input_comment {display:flex; justify-content:space-between;align-items:center;}
 .comments .input_comment i.none_profile {color:#594543;margin-right:1rem;}
-.comments textarea{width:90%;height:72px;background-color: #f5f2f2;border-radius: 4px;padding: 2px 4px;border-color: #cbc2c2;resize: none;}
-.comments textarea:focus{border: 2px solid;outline: none;}
+.comments textarea, .comments_container textarea{width:90%;height:72px;background-color: #f5f2f2;border-radius: 4px;padding: 2px 4px;border-color: #cbc2c2;resize: none;}
+.comments textarea:focus, .comments_container textarea:focus{border: 2px solid;outline: none;}
 .comt_cnt_box{text-align:end;}
 .comt_cnt_box span{color:#8C7B7B; font-size:14px;}
 .comment_btn {background-color:#594543;color:#f7f5f5;margin-left:0.5rem;}
@@ -91,7 +91,7 @@
 .comt_date {color:#8C7B7B; font-size:14px;}
 .coment_cont i.none_profile{font-size: 32px;}
 .comt_btn {text-align:end;position:relative;}
-.comt_btn button{margin:0 2px;color:#8C7B7B;border-bottom:1px solid #8C7B7B;font-size:12px;}
+.comt_btn button{margin:0 2px;color:#8C7B7B;border-bottom:1px solid #8C7B7B;font-size:12px;position: relative;z-index: 1;}
 .no_comt{padding:1rem;}
 .is_updated{color:#8C7B7B;font-size:12px;margin-left:4px;}
 .updated_cnt, .updated_cnt>.cnt {color:#8C7B7B;font-size:12px;}
