Changed bg color

--- a/mimidaily/src/main/webapp/css/main.css
+++ b/mimidaily/src/main/webapp/css/main.css
@@ -11,7 +11,7 @@
 :root {
   --mimiDark: #594543; 
   --mimiLight: #8C7B7B; 
-  --mimiBg: #F5F5F5; 
+  --mimiBg: #666655;
   --mimiContainer: #FBF9F9; 
   --mimiFooter: #F0ECEC; 
 }
